--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Date: 2018-07-31
 Author: person("Yi-Ju", "Tseng", email= "yjtseng@mail.cgu.edu.tw", role= c("aut", "cre"))
 Maintainer: HJ,Chiu <aibabi3@gmail.com>
-Description: A health data analysis tool of electric medical record in R. For medical, health, clinical data analysis from DHLab at CGU3
+Description: A health data analysis tool of electric medical record in R. For medical, health, clinical data analysis from DHLab at CGU.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -17,11 +17,8 @@ Imports:
     data.table,
     lubridate,
     stringr
-Suggests:
-    readr,
-    readxl
 Depends: R (>= 3.4.0)
 URL: https://github.com/DHLab-CGU
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
 Suggests: testthat
 
