remove data table pkg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(groupIcdBasedOnComorbid)
 export(groupIcdBasedOnPhecode)
 export(groupIcdToCCS)
 import(PheWAS)
-import(data.table)
 import(dplyr)
 import(icd)
+import(reshape2)
