resolve check warning:  Invalid license file pointers: LICENSE
Add LICENSE by devtools::use_mit_license()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: emr
 Type: Package
-Title: Tool of Electric Medical Record for grouping with ICD-9 and ICD-10 codes by ccs, comorbidities and phecodes, and calculating condition era. 
+Title: Tool of Electric Medical Record for grouping with ICD-9 and ICD-10 codes by ccs, comorbidities and phecodes, and calculating condition era
 Version: 0.1.0
 Date: 2018-07-31
 Author: person("Yi-Ju", "Tseng", email= "yjtseng@mail.cgu.edu.tw", role= c("aut", "cre"))
 Maintainer: HJ,Chiu <aibabi3@gmail.com>
-Description: A health data analysis tool of electric medical record in R. For medical, health, clinical data analysis from DHLab at CGU.Grouping ICD-9 and ICD-10 codes to Clinical Classifications Software (CCS), Comorbidities and phecode.ICD-9 and ICD-10 comorbidity mappings from AHRQ, Charlson and Elixhauser included.
+Description: A health data analysis tool of electric medical record in R.
+    For medical, health, clinical data analysis from DHLab at CGU.Grouping ICD-9 and ICD-10 codes to Clinical Classifications Software (CCS),
+    Comorbidities and phecode.ICD-9 and ICD-10 comorbidity mappings from AHRQ, Charlson and Elixhauser included. 
+    Calculating condition era for combining individual condition occurrences into a single condition era based on ICD code.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -16,7 +19,7 @@ Imports:
 Depends: R (>= 3.4.0)
 URL: https://github.com/DHLab-CGU
 RoxygenNote: 6.1.0
-Suggests: 
+Suggests:
     testthat,
     roxygen2,
     knitr,
