adding function and modify pkg description
1. Adding New Function: selectCases
2. remove icd pkg import: groupIcdToComorbid
3. modify description authors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,7 @@ Type: Package
 Title: Tool of Electric Medical Record for grouping with ICD-9 and ICD-10 codes by ccs, comorbidities and phecodes, and calculating condition era
 Version: 0.1.0
 Date: 2018-07-31
-Author: person("Yi-Ju", "Tseng", email= "yjtseng@mail.cgu.edu.tw", role= c("aut", "cre"))
-Maintainer: HJ,Chiu <aibabi3@gmail.com>
+Authors@R: c(person("Yi-Ju", "Tseng", email = "yjtseng@mail.cgu.edu.tw", role = c("aut")),person("Hsiang-Ju", "Chiu", email = "aibabi3@gmail.com", role = c("aut", "cre")))
 Description: A health data analysis tool of electric medical record in R.
     For medical, health, clinical data analysis from DHLab at CGU.Grouping ICD-9 and ICD-10 codes to Clinical Classifications Software (CCS),
     Comorbidities and phecode.ICD-9 and ICD-10 comorbidity mappings from AHRQ, Charlson and Elixhauser included. 
