--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(groupIcdToCCS)
 export(groupIcdToCCSLvl)
 export(groupIcdToComorbid)
 export(groupIcdToPhecode)
+export(selectCases)
 import(dplyr)
 import(icd)
 import(reshape2)
