update document, Bug Fixed
1. update document
README.md
emr.rmd
2. Bug Fixed
  1)group ICD to CCS, CCSlvl, phecode, comorbidity function
  2)modify error msg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(getConditionEra)
 export(groupIcdToCCS)
 export(groupIcdToCCSLvl)
 export(groupIcdToComorbid)
+export(groupIcdToCustomGrep)
 export(groupIcdToPhecode)
 export(selectCases)
 import(dplyr)
