--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ Imports:
     dplyr,
     reshape2
 Depends: R (>= 3.4.0)
-URL: https://github.com/DHLab-CGU
+URL: https://dhlab-cgu.github.io/emr/
+BugReports: https://github.com/DHLab-CGU/emr/issues
 RoxygenNote: 6.1.0
 Suggests:
     testthat,
     roxygen2,
     knitr,
+    devtools,
     rmarkdown
 VignetteBuilder: knitr
