--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,6 +13,7 @@ articles:
   contents:
   - '`emr`'
   - '`ChineseVersion_GetStarted`'
+  - '`ChineseVersion_Procedure`'
 
 - title: Grouping ICD-9 and ICD-10 codes by ...
   desc: ~
