--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(groupIcdDxToCustomGrep)
 export(groupIcdDxToPhecode)
 export(groupIcdPrToCCS)
 export(groupIcdPrToCCSLvl)
+export(groupIcdPrToProcedureClass)
 export(selectCases)
 import(dplyr)
 import(reshape2)
