add icdDxToCustomGrep function, modify icd related function of conversion
modify icd related function of conversion
1. icdDxShortToDecimal: tentatively for icd9 only
2.IcdDxToPhecode
3.getConditionEra

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(IcdDxToCCS)
 export(IcdDxToCCSLvl)
 export(IcdDxToComorbid)
 export(IcdDxToCustom)
+export(IcdDxToCustomGrep)
 export(IcdDxToPhecode)
 export(IcdPrToCCS)
 export(IcdPrToCCSLvl)
