--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,6 +25,7 @@ reference:
   - '`IcdDxToPhecode`'
   - '`IcdDxToComorbid`'
   - '`IcdDxToCustom`'
+  - '`IcdDxToCustomGrep`'
   - '`IcdPrToCCS`'
   - '`IcdPrToCCSLvl`'
   - '`IcdPrToProcedureClass`'
