modify grouping method data format, Add 2 new functions
1. 更改grouping method的資料型態
IcdDxToCCS
IcdDxToCCSLvl
IcdDxToComorbid
IcdDxToCustom
IcdDxToCustomGrep
IcdDxToPhecode
selectCases
2. 新增功能, 訂定index date來切割資料
splitDataByDate
3. 將新的grouping method資料長表轉為適合統計分析的資料寬表型態
groupedDataLongToWide

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,15 @@ export(IcdDxToCCS)
 export(IcdDxToCCSLvl)
 export(IcdDxToComorbid)
 export(IcdDxToCustom)
-export(IcdDxToCustomGrep)
 export(IcdDxToPhecode)
 export(IcdPrToCCS)
 export(IcdPrToCCSLvl)
 export(IcdPrToProcedureClass)
+export(IcdToCustomGrep)
 export(getConditionEra)
+export(groupedDataLongToWide)
 export(selectCases)
+export(splitDataByDate)
 import(dplyr)
 import(reshape2)
 importFrom(stats,complete.cases)
