Add sample file for ICD-CM-Code testing, optimize ICD_DtoS function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(getConditionEra)
 export(groupedDataLongToWide)
 export(selectCases)
 export(splitDataByDate)
+import(data.table)
 import(dplyr)
 import(reshape2)
 importFrom(stats,complete.cases)
