--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     dplyr,
-    reshape2
+    reshape2,
+    data.table
 Depends: R (>= 3.4.0)
 URL: https://dhlab-cgu.github.io/emr/
 BugReports: https://github.com/DHLab-CGU/emr/issues
