--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,7 +55,7 @@ reference:
   desc: ~
   contents:
   - '`IcdDxShortToDecimal`'
-  - '`IcdDxDecimaltoShort`'
+  - '`IcdDxDecimalToShort`'
 
 - title: Generation ICD-PCS code Decimal Format
   desc: ~
@@ -66,7 +66,7 @@ reference:
   desc: ~
   contents:
   - '`IcdPrShortToDecimal`'
-  - '`IcdPrDecimaltoShort`'
+  - '`IcdPrDecimalToShort`'
 
 - title: Data - ICD-CM-code Two Format maps
   desc: ~
