optimize ICD-Dx related functions
1.ICD-Dx related functions
IcdDxDecimalToShort
IcdDxShortToDecimal
IcdDxToCCS
IcdDxToCCSLvl
IcdDxToComorbid
splitDataByDate
IcdDxToCustom
IcdDxToPhecode
IcdDxToCustomGrep
getConditionEra
selectCases
splitDataByDate
2. modify the warning message of WrongICD
show the total quantity of wrong format or wrong ICD version, and the top ten wrong ICD

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,6 +39,11 @@ reference:
   contents:
   - '`selectCases`'
 
+- title: Split Data by index date
+  desc: ~
+  contents:
+  - '`splitDataByDate`'
+
 - title: Calculate condition era
   desc: ~
   contents:
