optimize ICD-Pr-related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(IcdDxToComorbid)
 export(IcdDxToCustom)
 export(IcdDxToCustomGrep)
 export(IcdDxToPhecode)
+export(IcdPrDecimalToShort)
+export(IcdPrShortToDecimal)
 export(IcdPrToCCS)
 export(IcdPrToCCSLvl)
 export(IcdPrToProcedureClass)
@@ -16,6 +18,5 @@ export(groupedDataLongToWide)
 export(selectCases)
 export(splitDataByDate)
 import(data.table)
-import(dplyr)
 importFrom(stats,complete.cases)
 importFrom(utils,head)
