Update sampleFile (Dx and Pr), bug fix , and update website

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,6 +44,11 @@ reference:
   contents:
   - '`splitDataByDate`'
 
+- title: Data format Conversion
+  desc: ~
+  contents:
+  - '`groupedDataLongToWide`'
+
 - title: Calculate condition era
   desc: ~
   contents:
