add patientRecordDatefunction and debug splitData function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(IcdPrToCCSLvl)
 export(IcdPrToProcedureClass)
 export(getConditionEra)
 export(groupedDataLongToWide)
+export(patientRecordDate)
 export(selectCases)
 export(splitDataByDate)
 import(data.table)
