--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,11 @@ export(IcdPrToProcedureClass)
 export(getConditionEra)
 export(groupedDataLongToWide)
 export(patientRecordDate)
+export(plot_errorICD)
 export(selectCases)
 export(splitDataByDate)
 import(data.table)
+import(ggplot2)
 importFrom(stats,complete.cases)
+importFrom(stats,reorder)
 importFrom(utils,head)
