add new function, rename phewas function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(IcdDxToCCSLvl)
 export(IcdDxToComorbid)
 export(IcdDxToCustom)
 export(IcdDxToCustomGrep)
-export(IcdDxToPhecode)
+export(IcdDxToPheWAS)
 export(IcdPrDecimalToShort)
 export(IcdPrShortToDecimal)
 export(IcdPrToCCS)
@@ -17,10 +17,12 @@ export(getConditionEra)
 export(groupedDataLongToWide)
 export(patientRecordDate)
 export(plot_errorICD)
+export(plot_groupedData)
 export(selectCases)
 export(splitDataByDate)
 import(data.table)
 import(ggplot2)
+importFrom(stats,chisq.test)
 importFrom(stats,complete.cases)
 importFrom(stats,reorder)
 importFrom(utils,head)
