modify file, fix bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,5 +24,6 @@ import(data.table)
 import(ggplot2)
 importFrom(stats,chisq.test)
 importFrom(stats,complete.cases)
+importFrom(stats,fisher.test)
 importFrom(stats,reorder)
 importFrom(utils,head)
