--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: emr
-Type: Package
 Title: Tool of Electric Medical Record for code standarization, data integration, EDA preparation and visualizatoin
 Version: 0.2.0
-Date: 2018-07-31
-Authors@R: c(person("Yi-Ju", "Tseng", email = "yjtseng@mail.cgu.edu.tw", role = c("aut")),person("Hsiang-Ju", "Chiu", email = "aibabi3@gmail.com", role = c("aut", "cre")))
+Date: 2019-07-09
+Authors@R: c(person("Yi-Ju", "Tseng", role = "aut", email = "yjtseng@mail.cgu.edu.tw"),
+             person("Hsiang-Ju", "Chiu", role = c("aut", "cre"), email = "aibabi3@gmail.com"))
+Author: Hsiang-Ju Chiu [aut,cre],
+         Yi-Ju Tseng [aut]
+Maintainer: Hsiang-Ju Chiu <aibabi3@gmail.com>             
 Description: A health data analysis tool of electric medical record in R.
     For medical, health, clinical data analysis from DHLab at CGU. Code standarization, data integration, EDA preparation and visualizatoin.
 License: MIT + file LICENSE
