--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: emr
-Title: Tool of Electric Medical Record for Code Standardization, Data Integration, Exploratory Data Analysis Preparation and Visualization
+Title: An analysis tool of Electric Medical Record
 Version: 0.2.0
 Date: 2019-07-09
 Authors@R: c(person("Hsiang-Ju", "Chiu", role = c("aut", "cre"), email = "aibabi3@gmail.com"),
              person("Yi-Ju", "Tseng", role = "aut", email = "yjtseng@mail.cgu.edu.tw"))
-Description: A health data analysis tool of electric medical record in R.
-    For clinical data analysis from Digital Health Lab at Chang Gung University, Taiwan. Code standardization, data integration, exploratory data analysis preparation and visualization.
+Description: A health data analysis tool of electric medical record for code standardization, data integration, exploratory data analysis preparation and visualization.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -23,6 +22,3 @@ Suggests:
     devtools,
     rmarkdown
 VignetteBuilder: knitr
-Author: Hsiang-Ju Chiu [aut, cre],
-        Yi-Ju Tseng [aut]
-Maintainer: Hsiang-Ju Chiu <aibabi3@gmail.com>   
