--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,7 +18,7 @@ articles:
 
 reference:
 
-- title: I. Code standarization
+- title: I. Code standardization
   desc: ~
   contents:
   - IcdDxShortToDecimal
