--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ import(ggplot2)
 importFrom(stats,chisq.test)
 importFrom(stats,complete.cases)
 importFrom(stats,fisher.test)
+importFrom(stats,na.omit)
 importFrom(stats,reorder)
 importFrom(utils,head)
