--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.0)
+Imports:
+    data.table
 URL: https://dhlab-tseng.github.io/emr/
 BugReports: https://github.com/DHLab-TSENG/emr/issues
 RoxygenNote: 6.1.1
