--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.0)
 Imports:
-    data.table,
-    ggplot2
+    data.table
 URL: https://dhlab-tseng.github.io/emr/
 BugReports: https://github.com/DHLab-TSENG/emr/issues
 RoxygenNote: 6.1.1
