--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,9 @@ export(icdPrShortToDecimal)
 export(icdPrToCCS)
 export(icdPrToCCSLvl)
 export(icdPrToProcedureClass)
-export(patientRecordDate)
-export(plot_errorICD)
-export(plot_groupedData)
+export(getEligiblePeriod)
+export(plotICDerror)
+export(plotDiagCat)
 export(selectCases)
 export(splitDataByDate)
 import(data.table)
