--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(icdPrToCCS)
 export(icdPrToCCSLvl)
 export(icdPrToProcedureClass)
 export(getEligiblePeriod)
-export(plotICDerror)
+export(plotICDError)
 export(plotDiagCat)
 export(selectCases)
 export(splitDataByDate)
