--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,12 +1,13 @@
-pandoc: 1.19.2.1
-pkgdown: 1.3.0
+pandoc: 2.3.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   Chi_Diagnosis: Chi_Diagnosis.html
   Chi_Procedure: Chi_Procedure.html
   Eng_Diagnosis: Eng_Diagnosis.html
   Eng_Procedure: Eng_Procedure.html
+last_built: 2020-08-13T03:20Z
 urls:
-  reference: https://dhlab-cgu.github.io/emr//reference
-  article: https://dhlab-cgu.github.io/emr//articles
+  reference: https://dhlab-tseng.github.io/dxpr//reference
+  article: https://dhlab-tseng.github.io/dxpr//articles
 
