--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Depends: R (>= 3.4.0)
 Imports:
     data.table,
     ggplot2
+Suggests:
+    knitr
 URL: https://dhlab-tseng.github.io/emr/
 BugReports: https://github.com/DHLab-TSENG/emr/issues
 RoxygenNote: 6.1.1
