--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(icdDxDecimalToShort)
 export(icdDxShortToDecimal)
 export(icdDxToCCS)
 export(icdDxToCCSLvl)
+export(icdDxToCCSR)
 export(icdDxToComorbid)
 export(icdDxToCustom)
 export(icdDxToCustomGrep)
