--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: dxpr
 Title: An analysis tool for diagnosis and procedure records
-Version: 0.3.0
-Date: 2020-08-12
+Version: 0.9.0
+Date: 2022-05-16
 Authors@R: c(person("Hsiang-Ju", "Chiu", role = c("aut", "cre"), email = "aibabi3@gmail.com"),
-             person("Yi-Ju", "Tseng", role = "aut", email = "yjtseng@mail.cgu.edu.tw"))
+             person("Yi-Ju", "Tseng", role = "aut", email = "yjtseng@mail.cgu.edu.tw"),
+             person("Chun-Ju", "Chen", role = "aut", email = "ju.chin.0902@mail.cgu.edu.tw"))
 Description: "dxpr" is a health data analysis tool for ICD diagnosis and procedure codes in electronic medical record. It is used for data integration, data wrangling and visualization.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -17,5 +18,5 @@ Suggests:
     testthat
 URL: https://dhlab-tseng.github.io/dxpr/
 BugReports: https://github.com/DHLab-TSENG/dxpr/issues
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 VignetteBuilder: knitr
