--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: dxpr
 Title: An analysis tool for diagnosis and procedure records
 Version: 0.9.0
 Date: 2022-05-16
-Authors@R: c(person("Hsiang-Ju", "Chiu", role = c("aut", "cre"), email = "aibabi3@gmail.com"),
-             person("Yi-Ju", "Tseng", role = "aut", email = "yjtseng@mail.cgu.edu.tw"),
+Authors@R: c(person("Yi-Ju", "Tseng", role = c("aut", "cre"), email = "yjtseng@mail.cgu.edu.tw"),
+             person("Hsiang-Ju", "Chiu", role = "aut", email = "aibabi3@gmail.com"),
              person("Chun-Ju", "Chen", role = "aut", email = "ju.chin.0902@mail.cgu.edu.tw"))
 Description: "dxpr" is a health data analysis tool for ICD diagnosis and procedure codes in electronic medical record. It is used for data integration, data wrangling and visualization.
 License: MIT + file LICENSE
@@ -20,3 +20,4 @@ URL: https://dhlab-tseng.github.io/dxpr/
 BugReports: https://github.com/DHLab-TSENG/dxpr/issues
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
+citation: "Tseng Y, Chiu H, Chen CJ. 2021. dxpr: an R package for generating analysis-ready data from electronic health records—diagnoses and procedures. PeerJ Computer Science 7:e520 https://doi.org/10.7717/peerj-cs.520"
